--- a/festival/Client/Pages/Index.razor
+++ b/festival/Client/Pages/Index.razor
@@ -5,30 +5,28 @@
 <body>
 
     <!-- The Band Section -->
-    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-        <h2 class="w3-wide align center">Musik Festival</h2>
-        <p class="w3-opacity"><i>We love music</i></p>
-        <p class="w3-justify">
-            At være frivillig til en festival kan være en spændende og givende oplevelse. Du vil have mulighed for at møde nye mennesker, lære nye ting og bidrage til at skabe en unik festivalløsning. Som frivillig vil du typisk have en række forskellige opgaver, såsom at hjælpe med opstilling og nedtagning af scenen, tjekke billetter og hjælpe med at sørge for, at gæsterne har det godt.
+    <!DOCTYPE html>
+    <html>
+    <body>
+
+
+        <p style="font-size:90px; text-align:center;">Musik Festival</p>
+        <p style="font-size:17px; text-align:center;">
+            Der er mange gode grunde til at være frivillig til en festival.
+            For det første vil du have mulighed for at bidrage til festivallens succes og være en del af et fællesskab.
+            Du vil også have mulighed for at lære nye færdigheder og møde nye mennesker.
+            Desuden vil du få en unik oplevelse og et indblik i, hvordan en festival fungerer bag kulisserne.
         </p>
+
+    </body>
+</html>
+
+
+<div class="mySlides w3-display-container w3-center">
+    <img src="https://www.w3schools.com/w3images/chicago.jpg" style="width:100%">
+    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
     </div>
-    <!-- Page content -->
-    <div class="w3-content" style="max-width:2000px;margin-top:46px">
-
-
-        <div class="mySlides w3-display-container w3-center">
-            <img src="https://www.w3schools.com/w3images/chicago.jpg" style="width:100%">
-            <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-            </div>
-        </div>
-    </div>
-
-
-    <!-- The Contact Section -->
-    <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
-        <h2 class="w3-wide w3-center">CONTACT</h2>
-    </div>
-
+</div>
 </body>
 
 </html>
