--- a/festival/Client/Pages/MinprofilPage.razor
+++ b/festival/Client/Pages/MinprofilPage.razor
@@ -179,7 +179,7 @@
 
 
 
-    public int alder = 0;
+    public int? alder = 0;
     public string email = "";
     public int antalSamletPoint = 0;
     public Frivillige ValgtFrivillig = new Frivillige();
