--- a/festival/Client/Pages/PointPage.razor
+++ b/festival/Client/Pages/PointPage.razor
@@ -25,7 +25,7 @@ Velkommen til scoreboard
 }
 else //Oprettelse af table
 {
-<table class="table">
+<table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>Fornavn</th>
