--- a/festival/Client/Pages/FrivilligePage.razor
+++ b/festival/Client/Pages/FrivilligePage.razor
@@ -78,9 +78,12 @@
             <button class="btn btn-primary" @onclick="UpdateFrivilligHandler">Opdater frivillig</button>
         </div>
 
+        <label for="DeleteFrivilligHandler">Indtast et ID, hvis du vil slette</label>
+        <div class="col-sm-12">
+            <button class="btn btn-primary" @onclick="DeleteFrivilligHandler">Delete frivillig</button>
+        </div>
+
     </form>
-
-
 
 
 
@@ -121,8 +124,17 @@
     {
         Console.WriteLine("In update");
         Frivillige item = new Frivillige(frivilligid: Frivilligid, fornavn: Fornavn, efternavn: Efternavn, alder: Alder, email: Email, tlf: Tlf, adresse: Adresse);
-            ErrorCode = await FrivilligeService.UpdateFrivillig(item);
-            Console.WriteLine(ErrorCode); 
+        ErrorCode = await FrivilligeService.UpdateFrivillig(item);
+        Console.WriteLine(ErrorCode);
+    }
+
+    //Sletter valfte kontakt info for eksisterende frivillig
+    private async Task DeleteFrivilligHandler()
+    {
+        Console.WriteLine("Deleting");
+        Frivillige item = new Frivillige(frivilligid: Frivilligid, fornavn: Fornavn, efternavn: Efternavn, alder: Alder, email: Email, tlf: Tlf, adresse: Adresse);
+        ErrorCode = await FrivilligeService.DeleteFrivillige(item);
+        Console.WriteLine(ErrorCode);
     }
 
 
