--- a/festival/Client/Pages/FrivilligePage.razor
+++ b/festival/Client/Pages/FrivilligePage.razor
@@ -128,7 +128,7 @@
         Console.WriteLine(ErrorCode);
     }
 
-    //Sletter valfte kontakt info for eksisterende frivillig
+    //Sletter valgte kontakt info for eksisterende frivillig
     private async Task DeleteFrivilligHandler()
     {
         Console.WriteLine("Deleting");
