--- a/festival/Client/Pages/MinprofilPage.razor
+++ b/festival/Client/Pages/MinprofilPage.razor
@@ -12,8 +12,6 @@
 
 <PageTitle>Min profil</PageTitle>
 
-
-
 <h1>Her kan du se status på din profil</h1>
 
 
@@ -30,37 +28,54 @@
         <div class="col-sm-6 form-check border border-3 border border-dark ">
 
 
-
             <label for="vagter">Vælg Person</label>
 
-
-
-            <InputSelect id="Navn" @bind-Value=@frivilligid class="form-control rounded-2">
-
-
+            <InputSelect id="Navn" @bind-Value=@Frivilligid class="form-control rounded-2">
                 @foreach (var get in gets)
                 {
                     <option value="@get.Frivilligid"> @get.Fornavn @get.Efternavn (@get.Frivilligid) </option>
 
-
-
                 }
             </InputSelect>
 
+
+            <label for="vagter">Vælg en vagt</label>
+
+            <InputSelect id="Vagt" @bind-Value=@Vagtid class="form-control rounded-2">
+
+
+                @foreach (var vagt in vagter)
+                    {
+                        foreach (var hent in henter)
+                        {
+                            if (vagt.Arbejdspladsid == hent.Arbejdspladsid) { 
+                            <option value="@vagt.Vagtid"> @hent.Arbejdspladsnavn </option>
+                            }
+
+                        }
+
+                    }
+            </InputSelect>
+
             <br /><br />
-    <tr> I dropdown menuen har du mulighed for at vælge din profil og se dine kontaktoplysning og andet relevant information. I skemaet under kan du se en liste og dine påtaget vagter samt relevant information omkring disse vagter.</tr>
+
+            <div class="col-sm-12">
+                <button class="btn btn-primary" @onclick="UpdateVagt2Handler">Tag en vagt</button>
+            </div>
+
+
+            <br /><br />
+<tr> I dropdown menuen har du mulighed for at vælge din profil og se dine kontaktoplysning og andet relevant information. I skemaet under kan du se en liste og dine påtaget vagter samt relevant information omkring disse vagter.</tr>
     <br /><br />
 
 
     </div>
 
 
-
     <div class="col-sm-6 card bg-Light rounded-3 border border-3 border border-dark" style="width: 26rem; margin-left:135px;">
         <h5 class="card-title"> Info</h5>
-        <p class="card-text"> FrivilligID: @frivilligid </p>
+        <p class="card-text"> FrivilligID: @Frivilligid </p>
         <p class="card-text"> Navn: @fornavn @efternavn </p>
-        <p class="card-text"> Valgt frivillig: @frivilligid </p>
         <p class="card-text"> Adresse: @adresse </p>
         <p class="card-text"> Tlf: @tlf </p>
         <p class="card-text"> Email: @email </p>
@@ -74,16 +89,11 @@
 
 
 
-
-
-
 @{
     foreach (var frivillig in gets)
     {
-        if (frivillig.Frivilligid == frivilligid)
+        if (frivillig.Frivilligid == Frivilligid)
         {
-
-
 
             ValgtFrivillig = frivillig;
             adresse = frivillig.Adresse;
@@ -102,14 +112,8 @@
 
 
 <table class="table table-bordered border-dark border border-3">
-
-
-
     <thead>
         <tr>
-
-
-
             <th>Frivilligid</th>
             <th>Vagtid</th>
             <th>Arbejdspladsid</th>
@@ -119,13 +123,11 @@
     </thead>
     <tbody>
 
-
-
         @{
             //Looper gennem alle frivillige i frivilligelisten
             foreach (var frivillig in gets)
             {
-                if (frivillig.Frivilligid == frivilligid)
+                if (frivillig.Frivilligid == Frivilligid)
                 {
                     //Looper gennem alle vagter i vagtlisten
                     foreach (var vagt in vagter)
@@ -133,8 +135,6 @@
                         //Hvis frivillig id fra dropdown er lig frivilligid i vagtlisten, så laver vi html boks til hver vagt
                         if (frivillig.Frivilligid == vagt.Frivilligid)
                         {
-
-
 
                             <tr>
                                 <td>@vagt.Frivilligid</td>
@@ -145,11 +145,7 @@
                             </tr>
                         }
 
-
-
                     }
-
-
 
                 }
             }
@@ -158,44 +154,29 @@
 </table>
 
 
-
-
-
-
 @code {
-
-
-
 
     //Default værdier for frivillige
 
-
-
     public string fornavn = "Navn";
     public string efternavn = "Navn";
-    public int frivilligid = 0;
+    public int Frivilligid = 0;
     public string adresse = "";
     public string tlf = "";
-
-
-
     public int? alder = 0;
     public string email = "";
     public int antalSamletPoint = 0;
     public Frivillige ValgtFrivillig = new Frivillige();
-
-
-
+    public Arbejdsplads ValgtArbejdsplads = new Arbejdsplads();
     // -II- Vagter
     public int? arbejdspladsid = 0;
-    public int? vagtid = 0;
+    public int Vagtid = 0;
     public int? tidStart = 0;
     public int? tidSlut = 0;
     public int? antalPoint = 0;
     public DateTime? dato = DateTime.Now;
     public Vagt ValgtVagt = new Vagt();
-
-
+    private int ErrorCode { get; set; } = 0;
 
 
 
@@ -203,28 +184,28 @@
     //Henter vores shelter-data fra mongo(database)
     [Inject]
     public IFrivilligeService FrivilligeService { get; set; }
+
     [Inject]
     public IVagtService VagtService { get; set; }
 
-
-
+    [Inject]
+    public IArbejdspladsService ArbejdspladsService { get; set; }
 
     public List<Frivillige> gets = new List<Frivillige>();
+    public List<Arbejdsplads> henter = new List<Arbejdsplads>();
     public List<Vagt> vagter = new List<Vagt>();
 
 
 
     protected override async Task OnInitializedAsync()
     {
-
-
-
         gets = (await FrivilligeService.GetAllFrivillige()).ToList();
         gets = gets.OrderBy(y => y.Frivilligid).ToList();
         ValgtFrivillig = gets[0];
-        
 
-
+        henter = (await ArbejdspladsService.GetAllArbejdsplads()).ToList();
+        henter = henter.OrderBy(y => y.Arbejdspladsid).ToList();
+        ValgtArbejdsplads = henter[0];
 
         vagter = (await VagtService.GetAllVagt()).ToList();
         vagter = vagter.OrderBy(x => x.Vagtid).ToList();
@@ -232,7 +213,16 @@
     }
 
 
+    private async Task UpdateVagt2Handler()
+    {
+        Console.WriteLine("In update");
+        Vagt item = new Vagt(vagtid: Vagtid, frivilligid: Frivilligid);
+        ErrorCode = await VagtService.UpdateVagt2(item);
+        Console.WriteLine(ErrorCode);
 
+        vagter = (await VagtService.GetAllVagt()).ToList(); //Efter vi har slettet, opdaterer den tabelen med det samme.
+
+    }
 
 
 }
